--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,4 +1,3 @@
-
 /** Basic styling **/
 *, ::after, ::before {
   box-sizing: border-box;
@@ -50,6 +49,14 @@ a:hover {
   text-decoration: underline;
 }
 
+dl, ol, ul {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+ol, ul {
+  padding-left: 2rem;
+}
+
 /** Layout **/
 .vspace-sm { margin-top: 1em; }
 .vspace-md { margin-top: 2em; }
@@ -61,29 +68,46 @@ header {
   left: 0;
   right: 0;
   height: 4.5rem;
-  border-bottom: 1px solid #E5E7EB;
-  background-color: #fff;
-  z-index: 100;
-  padding: 1.25rem;
 
   display: grid;
   gap: 1rem;
   grid-template-columns: 1fr 2fr 1fr;
+  align-items: center;
+
+  border-bottom: 1px solid #E5E7EB;
+  background-color: #fff;
+  z-index: 100;
+  padding: 1.25rem;
 }
 
 header .branding {
-  display: grid;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+
+  align-items: center;
+  justify-content: left;
+
   color: #483DC1;
   font-weight: 500;
-  justify-content: left;
   font-size: 1.5rem;
+  padding-left: 1rem;
+}
+header .branding .icon {
+  display: flex;
+  width: 2rem;
+  height: 2rem;
+  background-color: #483DC1;
+  border-radius: 0.375rem;
 }
 header .controls {
-  display: grid;
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 header .user {
-  display: grid;
+  display: flex;
+  align-items: center;
   justify-content: right;
 }
 
@@ -106,7 +130,7 @@ main {
 .grid {
   display: grid;
   gap: 0;
-  transition: 150ms;
+  transition: 200ms;
 }
 
 .grid > div {
@@ -191,6 +215,18 @@ main {
     grid-template-columns: auto;
   }
 }
+/** Sneak **/
+.grid.wiz-planning .hide-in-planning {
+  display: none;
+}
+
+.grid.wiz-editing .hide-in-editing {
+  display: none;
+}
+
+.grid.wiz-reviewing .hide-in-reviewing {
+  display: none;
+}
 
 .grid .centering {
   display: grid;
@@ -233,19 +269,34 @@ main {
   text-decoration: none;
   vertical-align: middle;
   cursor: pointer;
-
-  color: #483DC1;
-  border: 1px solid #483DC1;
-  background-color: #fff;
 }
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
 }
 
-.btn.btn-primary {
+.btn.btn-secondary {
+  color: #483DC1;
+  border: 1px solid #483DC1;
+  background-color: #fff;
+}
+.btn.btn.btn-secondary-danger {
+  color: #dc3545;
+  border: 1px solid #dc3545;
+  background-color: #fff;
+}
+
+.btn.btn-primary,
+.btn.btn-secondary.active {
   color: #fff;
   border: 1px solid #483DC1;
   background-color: #483DC1;
+}
+
+.btn.btn-danger,
+.btn.btn-secondary-danger.active {
+  color: #fff;
+  border: 1px solid #dc3545;
+  background-color: #dc3545;
 }
 
 .btn-group {
@@ -341,6 +392,7 @@ main {
   overflow: hidden;
 }
 .card > div {
+  transition: 200ms;
   border-bottom: 1px solid #E5E7EB;
 }
 .card > div:last-child {
@@ -349,21 +401,34 @@ main {
 .card > div.title {
   padding: 0.75rem 0.75rem;
   font-weight: 500;
+  cursor: pointer;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 .card > div.body {
   padding: 0.75rem 1rem;
 }
+.card > div.hidden {
+  display: none;
+}
 .card > div.alert {
   padding: 0.75rem 1rem;
+}
+.card > div.alert.alert-lite {
+  color: #20b9d7;
 }
 .card > div.alert.alert-info {
   background-color: #cff4fc;
   color: #055160;
   border-color: #9eeaf9;
 }
-.card > div.alert.alert-info-lite {
-  color: #20b9d7;
+.card > div.alert.alert-warning {
+  background-color: #fff3cd;
+  color: #664d03;
+  border-color: #ffe69c;
 }
+
 .card > div.list {
   overflow-y: scroll;
   height: 250px;
@@ -479,6 +544,27 @@ main {
 .sns-post .post-attachments > * {
   flex: 1 1 50%;
 }
-.sns-post .post-attachments > .img {
+.sns-post .post-attachments > .image {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
+/** Animations **/
+@keyframes wiggle {
+  from { transform: rotate(-5deg) scale(1.1);}
+  to { transform: rotate(5deg) scale(1.1); }
+}
+
+.wiggle {
+  transform-origin: center;
+  animation: wiggle 150ms linear infinite alternate;
+}
+
+@keyframes shake {
+  from { transform: translateX(-10px); }
+  to { transform: translateX(10px); }
+}
+
+.shake {
+  animation: shake 80ms linear infinite alternate;
 }
