--- a/src/css/common/animations.css
+++ b/src/css/common/animations.css
@@ -17,3 +17,17 @@
 .shake {
   animation: shake 80ms linear infinite alternate;
 }
+
+@keyframes show {
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.showable {
+  animation: show 600ms 100ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
+  transform: rotateX(-90deg);
+  transform-origin: top center;
+  opacity: 0;
+}
