--- a/src/css/base.css
+++ b/src/css/base.css
@@ -62,10 +62,6 @@ ol, ul {
 }
 
 /** Layout **/
-.vspace-sm { margin-top: 1em; }
-.vspace-md { margin-top: 2em; }
-.vspace-lg { margin-top: 3em; }
-
 header {
   position: fixed;
   top: 0;
@@ -81,7 +77,7 @@ header {
   border-bottom: 1px solid #E5E7EB;
   background-color: #fff;
   z-index: 100;
-  padding: 1.25rem;
+  padding: 0 1.25rem;
 }
 
 header .branding {
