--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,7 @@
 @import url(./common/sns.css);
 @import url(./common/throbbers.css);
 @import url(./common/animations.css);
-
+@import url(./common/modal.css);
 /** Basic styling **/
 *, ::after, ::before {
   box-sizing: border-box;
@@ -342,44 +342,6 @@ main {
   margin-left: -1px;
 }
 
-/** **/
-.modal {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  display: none;
-  justify-content: center;
-  align-items: center;
-
-  z-index: 9999;
-}
-
-.modal.show {
-  display: flex;
-}
-
-.modal .modal-dialog {
-  background-color: #fff;
-  border-radius: 0.375rem;
-  min-width: 100px;
-  min-height: 100px;
-
-  z-index: 9999;
-}
-
-.modal .modal-background {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(8px);
-}
 
 /** badges **/
 .text-bg-info {
