--- a/src/css/common/modal.css
+++ b/src/css/common/modal.css
@@ -46,3 +46,11 @@
 
   transition: background-color 300ms;
 }
+
+
+.modal-dialog .modal-title {
+  padding: 0.75rem;
+  border-bottom: 1px solid #E5E7EB;
+  user-select: none;
+  cursor: pointer;
+}
